--- a/index.html
+++ b/index.html
@@ -36,6 +36,6 @@
 </head>
 <body>
   <div id='app' class='invisible'></div>
-  <script type='text/babel' src='index.js'></script>
+  <script type='text/babel' src='app.js'></script>
 </body>
 </html>
