--- a/index.html
+++ b/index.html
@@ -43,22 +43,28 @@
   {
     opacity: .3;
     text-decoration: none;
-    line-height: 50px;
-    height: 50px;
+    line-height: 6vh;
+    height: 6vh;
     display: flex;
     align-items: center;
     justify-content: space-between;
     /*border: 1px solid blue;*/
     position: absolute;
-    bottom: 30px;
+    bottom: 2.5vh;
     left: 50%;
     transform: translateX(-50%);
+    z-index: -1;
   }
   img
   {
-    width: 50px;
-    height: 50px;
+    width: 6vh;
+    height: 6vh;
     margin-right: 5px;
+  }
+  .list
+  {
+    max-height: 19vh;
+    overflow-y: auto;
   }
 </style>
 </head>
