clear all button

--- a/index.html
+++ b/index.html
@@ -74,20 +74,20 @@
     overflow-y: auto;
     flex-grow: 1;
   }
-  .ListView::-webkit-scrollbar
+  ::-webkit-scrollbar
   {
     width: .4rem;
   }
-  .ListView::-webkit-scrollbar,
-  .ListView::-webkit-scrollbar-thumb
+  ::-webkit-scrollbar,
+  ::-webkit-scrollbar-thumb
   {
     border-radius: 4px;
   }
-  .ListView::-webkit-scrollbar-thumb
+  ::-webkit-scrollbar-thumb
   {
     background-color: rgba(0,0,0,.1);
   }
-  .ListView:hover::-webkit-scrollbar-thumb
+  *:hover::-webkit-scrollbar-thumb
   {
     background-color: rgba(0,0,0,.2);
   }
