added loader / lifecycle methods

--- a/index.html
+++ b/index.html
@@ -5,6 +5,45 @@
   <script crossorigin src='https://unpkg.com/react@16/umd/react.development.js'></script>
   <script crossorigin src='https://unpkg.com/react-dom@16/umd/react-dom.development.js'></script>
   <script src='https://unpkg.com/babel-standalone@6/babel.min.js'></script>
+  <script>
+    window.API = {
+      fetch () {
+        return new Promise ((res, rej) => {
+          const items = [
+            {
+              id: 'Michiru',
+              active: true,
+            },
+            {
+              id: 'Yuuji',
+              active: true,
+            },
+            {
+              id: 'Makina',
+              active: true,
+            },
+            {
+              id: 'Amane',
+              active: true,
+            },
+            {
+              id: 'Yumiko',
+              active: true,
+            },
+            {
+              id: 'Sachi',
+              active: true,
+            },
+            {
+              id: 'Kazuki',
+              active: false,
+            },
+          ];
+          setTimeout (() => res (items), 2000)
+        });
+      }
+    };
+  </script>
   <style>
   *
   {
@@ -24,13 +63,23 @@
   {
     color: blue;
     border: 1px solid gray;
-    padding: 2px;
+    height: 1.5rem;
+    padding-left: .25rem;
+    padding-right: .25rem;
+    box-sizing: border-box;
     margin-right: 5px;
+  }
+  button
+  {
+    min-height: 1.5rem;
   }
   :root
   {
     /*border: 1px solid blue;*/
     font-family: Calibri;
+  }
+  body
+  {
     margin: 0;
   }
   .invisible
@@ -50,7 +99,6 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    /*border: 1px solid blue;*/
     position: absolute;
     bottom: 2.5vh;
     left: 2.5vh;
@@ -92,6 +140,31 @@
   {
     background-color: rgba(0,0,0,.2);
   }
+  .icon
+  {
+    user-select: none;
+    border: 1px solid gray;
+    border-radius: 50%;
+    width: 1.5rem;
+    height: 1.5rem;
+    font-size: 1rem;
+    line-height: 1.5rem;
+    display: inline-block;
+    text-align: center;
+    margin-left: 5px;
+    border-color: rgba(0,0,0,.1);
+    transition: border-color .15s, background-color .15s;
+  }
+  .icon:hover
+  {
+    border-color: rgba(0,0,0,.5);
+    background-color: rgba(0,128,255,.1);
+  }
+  .Loader
+  {
+    width: 6vh;
+    height: 6vh;
+  }
 </style>
 </head>
 <body>
@@ -101,6 +174,7 @@
     <img src='https://widget.battleforthenet.com/iframe/images/github.svg'>
     GitHub
   </a>
+  <script type='text/babel' src='loader.js'></script>
   <script type='text/babel' src='app.js'></script>
 </body>
 </html>
