--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
               active: false,
             },
           ];
-          setTimeout (() => res (items), 2000)
+          setTimeout (() => res (items), 3000)
         });
       }
     };
@@ -75,7 +75,6 @@
   }
   :root
   {
-    /*border: 1px solid blue;*/
     font-family: Calibri;
   }
   body
@@ -165,10 +164,49 @@
     width: 6vh;
     height: 6vh;
   }
+  .paginator
+  {
+    /*border: 2px solid red;*/
+    width: 100vw;
+    height: 100vh;
+    position: absolute;
+    box-sizing: border-box;
+  }
+  .page_indicator
+  {
+    position: absolute;
+    top: 95%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    /*border: 1px solid red;*/
+  }
+  .page_indicator > .icon:first-child
+  {
+    margin-left: 0;
+  }
+  .page_indicator > .icon
+  {
+    /*border: 1px solid blue;*/
+    width: .4rem;
+    height: .4rem;
+    line-height: .4rem;
+    margin-left: .15rem;
+  }
+  .icon.selected
+  {
+    background-color: rgba(0,0,0,.1);
+  }
 </style>
 </head>
 <body>
-  <div id='app' class='invisible'>
+  <div class='paginator'>
+    <div id='app' class='invisible'>
+    </div>
+    <div class='page_indicator invisible'>
+      <span class='icon'></span>
+      <span class='icon selected'></span>
+      <span class='icon'></span>
+    </div>
   </div>
   <a class='invisible' href='https://github.com/spenceryue/react-bootcamp'>
     <img src='https://widget.battleforthenet.com/iframe/images/github.svg'>
